<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Social Q&amp;A</string>

    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="name_hint">name</string>
    <string name="city_hint">boston, ma</string>

    <string name="missing_password_error">You must provide a password</string>
    <string name="mis_match_password_error">The passwords do not match</string>
    <string name="missing_name_error">You must provide your name</string>

    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>

    <string name="login_loading">Login...</string>
    <string name="create_user_loading">Creating User...</string>

    <!-- Messages -->
    <string name="error_msg_title">Error</string>
    <string name="warning_msg_title">Warning</string>
    <string name="info_msg_title">Info</string>
    <string name="confirm_msg_title">Confirm</string>
    <string name="msg_ok">OK</string>
    <string name="msg_cancel">CANCEL</string>
    <string name="msg_yes">YES</string>
    <string name="msg_no">NO</string>

    <!-- Show user questions -->
    <string name="show_question_label">Questions</string>
    <string name="no_questions_list_text">No questions found...</string>

    <string name="remove_question_message">Are you sure you want to remove the selected question?</string>
    <string name="remove_question_loading_text">Removing Questions...</string>
    <string name="remove_question_cab_menu_text">Remove Question?</string>
    <string name="selected_cab_text">Selected</string>

    <!-- Create question -->
    <string name="create_question_label">Create Question</string>
    <string name="new_question_hint">question</string>
    <string name="current_location">current location</string>
    <string name="locating_user_text">Locating...</string>
    <string name="saving_question_text">Creating Question...</string>
    <string name="created_by">Submitted by: %s</string>
    <string name="create_at">Submitted on: %s</string>

    <!-- Show All Questions -->
    <string name="show_all_questions_label">All Questions</string>

    <!-- Answer -->
    <string name="answer_question_hint">answer</string>
    <string name="asked_by_label">asked by:</string>
    <string name="asked_on_label">asked on:</string>
    <string name="asked_from_label">location:</string>
    <string name="submitting_answer_text">Submitting answer...</string>

    <!-- Menu Title -->
    <string name="new_question_menu_title">ASK</string>
    <string name="show_all_questions_menu_title">SHOW ALL</string>
    <string name="save_question_menu_title">CREATE</string>
    <string name="logout_menu_title">LOGOUT</string>
    <string name="delete_menu_title">DELETE</string>
    <string name="answer_menu_title">ANSWER</string>

</resources>
