<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/fill">

    <LinearLayout
        style="@style/wide"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmail"
            style="@style/wide_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email_hint"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edtPassword"
            style="@style/wide_edit_text"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_hint"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edtPasswordConfirm"
            style="@style/wide_edit_text"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/confirm_password_hint"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edtName"
            style="@style/wide_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/name_hint"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"/>

        <EditText
            android:id="@+id/edtCity"
            style="@style/wide_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/city_hint"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        style="@style/wide_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/sign_up_button"/>

</LinearLayout>