<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    style="@style/fill">

    <LinearLayout
        style="@style/wide"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmail"
            style="@style/wide_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/email_hint"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:text="rde8026@gmail.com"/>

        <EditText
            android:id="@+id/edtPassword"
            style="@style/wide_edit_text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password_hint"
            android:singleLine="true"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:text="iiiiii"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/wide_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login_button"/>

    <Button
        android:id="@+id/btnSignUp"
        style="@style/wide_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/sign_up_button"/>

</LinearLayout>